fix: update workflow name

--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -5,7 +5,7 @@ on:
     types: [opened]
 
 jobs:
-  fetch-opened-issue:
+  distribute-tokens:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
